@@ -574,7 +574,7 @@ GTK_DOC_CHECK(1.2)
 ###############################
 
 #dnl check for "check", unit testing library/header
-#AM_PATH_CHECK([0.9.2],
+#AM_PATH_CHECK([0.9.4],
 #    [
 #        HAVE_CHECK=yes
 #        AC_MSG_NOTICE(CHECK_CFLAGS: $CHECK_CFLAGS)
@@ -586,7 +586,7 @@ GTK_DOC_CHECK(1.2)
 
 dnl pkg-config check that for libcheck that works for cross-compiling
 dnl but not normal compilation on Fedora & Ubuntu:
- PKG_CHECK_MODULES(CHECK, check >= 0.9.2,
+ PKG_CHECK_MODULES(CHECK, check >= 0.9.4,
    AM_CONDITIONAL(HAVE_CHECK, true),
    AM_CONDITIONAL(HAVE_CHECK, false)
  )
